--- a/Project/Source/Forms/MainForm/MainForm.resx
+++ b/Project/Source/Forms/MainForm/MainForm.resx
@@ -967,7 +967,7 @@
         AAAAAElFTkSuQmCC
 </value>
   </data>
-  <metadata name="TimerBatch.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+  <metadata name="TimerStatus.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>230, 16</value>
   </metadata>
   <metadata name="TimerMemory.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
